--- a/dash.html
+++ b/dash.html
@@ -101,30 +101,38 @@ const pages = {
       <div class="card"><h3>Revenue</h3><p id="kpiRevenue">$0</p><small>Auto</small></div>
     </div>
     <div class="grid">
-      <div class="card">
-        <h3>Pipeline (Last 6 Weeks)</h3>
-        <canvas id="pipelineChart" height="100"></canvas>
-      </div>
-      <div class="card" id="tasksCard">
-        <h3>Tasks</h3>
-        <ul id="taskList" style="list-style:none;padding:0;margin:0;">
-          <li><input type="checkbox" /> Call new leads <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" checked /> Launch email campaign <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" /> Update funnel step <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" /> Review automation <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-        </ul>
-        <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
-        <h3>Recent Opportunities</h3> 
-        <table id="oppsTable">
-        <thead><tr><th>Deal</th><th>Stage</th><th>Value</th><th>Owner</th><th>Updated</th><th>Action</th></tr></thead> <tbody>
+  <div class="card">
+    <h3>Pipeline (Last 6 Weeks)</h3>
+    <canvas id="pipelineChart" height="100"></canvas>
+  </div>
+
+  <div class="card" id="tasksCard">
+    <h3>Tasks</h3>
+    <ul id="taskList" style="list-style:none;padding:0;margin:0;">
+      <li><input type="checkbox" /> Call new leads <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+      <li><input type="checkbox" checked /> Launch email campaign <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+      <li><input type="checkbox" /> Update funnel step <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+      <li><input type="checkbox" /> Review automation <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+    </ul>
+    <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
+  </div>
+
+  <div class="card">
+    <h3>Recent Opportunities</h3> 
+    <table id="oppsTable">
+      <thead>
+        <tr><th>Deal</th><th>Stage</th><th>Value</th><th>Owner</th><th>Updated</th><th>Action</th></tr>
+      </thead>
+      <tbody>
         <tr><td>Website Redesign</td><td>Proposal</td><td>$8400</td><td>Alex</td><td>Today</td><td><button class="btn edit-btn">Edit</button></td></tr>
         <tr><td>SEO Retainer</td><td>Negotiation</td><td>$2100</td><td>Sam</td><td>Yesterday</td><td><button class="btn edit-btn">Edit</button></td></tr> 
         <tr><td>Ads Package</td><td>Qualified</td><td>$3600</td><td>Jamie</td><td>Aug 20</td><td><button class="btn edit-btn">Edit</button></td></tr> 
         <tr><td>CRM Migration</td><td>Discovery</td><td>$5200</td><td>Riley</td><td>Aug 17</td><td><button class="btn edit-btn">Edit</button></td></tr> 
-        </tbody> 
-        </table>
-        </div>
-        ,
+      </tbody> 
+    </table>
+  </div>
+</div>
+,
   Vendor: `<h1>Vendor Management</h1><p>Vendor content here...</p>`,
   Commodity: `<h1>Commodity and Price Monitoring</h1><p>Commodity content here...</p>`,
   Supply: `<h1>Supply Monitoring</h1><p>Supply content here...</p>`,
