--- a/dash.html
+++ b/dash.html
@@ -133,7 +133,7 @@ const pages = {
         </ul>
         <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
       </div>
-
+</div>
       <div class="card">
         <h3>Recent Opportunities</h3>
         <table id="oppsTable">
