--- a/loginadmin.html
+++ b/loginadmin.html
@@ -119,7 +119,7 @@
         return;
       }
       if(password === correctPassword && codeInput == otp) {
-        window.location.href = "dash.html";
+        window.location.href = "admindashboard.html";
       } else {
         document.getElementById("message").textContent = "Invalid password or OTP";
       }
