--- a/userdashboard.html
+++ b/userdashboard.html
@@ -1,1 +1,307 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Admin Dashboard</title>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<style>
+:root{
+  --text:#111111; --blue:#0a53c1; --ink-20:#f4f6f8;
+  --white:#ffffff; --border:#e6e8eb;
+  --shadow:0 6px 24px rgba(0,0,0,.06);
+}
+*{box-sizing:border-box}
+body{margin:0;font-family:Inter,system-ui,sans-serif;background:var(--white);color:var(--text);}
+.app{display:grid;grid-template-columns:240px 1fr;min-height:100vh}
+.sidebar{border-right:1px solid var(--border);background:var(--white);transition:transform .3s}
+.sidebar.open{transform:translateX(0)}
+.sidebar:not(.open){transform:translateX(-100%)}
+.brand{font-weight:800;text-transform:uppercase;padding:1rem;border-bottom:1px solid var(--border);}
+nav{padding:1rem}
+.nav-item{display:block;padding:.6rem;border-radius:8px;text-decoration:none;color:var(--text);}
+.nav-item:hover,.nav-item.active{background:var(--ink-20)}
+.main{display:grid;grid-template-rows:64px 1fr;min-width:0}
+.topbar{display:flex;align-items:center;justify-content:space-between;padding:0 1rem;border-bottom:1px solid var(--border);}
+.search{display:flex;align-items:center;border:1px solid var(--border);border-radius:12px;padding:.4rem .7rem}
+.search input{border:none;outline:none}
+.btn{border:1px solid var(--text);background:transparent;padding:.4rem .8rem;border-radius:8px;cursor:pointer}
+.content{padding:1rem;overflow:auto}
+.grid{display:grid;gap:1rem;grid-template-columns:repeat(auto-fit,minmax(200px,1fr))}
+.card{background:#fff;border:1px solid var(--border);border-radius:12px;padding:1rem;box-shadow:var(--shadow)}
+table{width:100%;border-collapse:collapse}
+th,td{border-bottom:1px solid var(--border);padding:.6rem;text-align:left}
+th{font-size:.85rem;opacity:.7}
+.overlay{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.5);align-items:center;justify-content:center}
+.modal{background:#fff;padding:1rem;border-radius:12px;min-width:300px}
+.modal input,.modal select{display:block;width:100%;margin:.5rem 0;padding:.4rem}
+.edit-icon, .delete-icon{cursor:pointer;margin-left:4px;}
+</style>
+</head>
+<body>
+<div class="app">
+  <aside class="sidebar open" id="sidebar">
+    <div class="brand">LGU 3 ADMIN SYSTEM</div>
+   <nav>
+    <a href="#" class="nav-item active" data-page="dashboard">Dashboard</a>
+    <a href="#" class="nav-item" data-page="Vendor">Vendor Management</a>
+    <a href="#" class="nav-item" data-page="Commodity">Commodity and Price Monitoring</a>
+    <a href="#" class="nav-item" data-page="Supply">Supply Monitoring</a>
+    <a href="#" class="nav-item" data-page="Inspection">Inspection and compliance</a>
+    <a href="#" class="nav-item" data-page="Reports">Reports and Dashboard with AI analytic</a>
+    <a href="#" class="nav-item" data-page="Settings">Settings</a>
+    <a href="main.html" class="nav-item logout-btn" style="margin-top: 2rem; font-weight: bold;">Logout</a>
+  </nav>
+</aside>
 
+  <section class="main">
+    <header class="topbar">
+      <div style="display:flex; align-items:center; gap:0.5rem;">
+        <button class="btn" id="backBtn">← Back</button>
+        <button class="btn" id="menuBtn">☰</button>
+        <div class="search">🔎 <input id="searchInput" type="search" placeholder="Search opportunities…"></div>
+      </div>
+      <div>
+        <button class="btn" id="newBtn">+ New</button>
+        <button class="btn" id="exportBtn">Export</button>
+      </div>
+    </header>
+
+    <div class="content" id="contentArea"></div>
+  </section>
+</div>
+
+<div class="overlay" id="overlay">
+  <div class="modal">
+    <h3 id="modalTitle">New Opportunity</h3>
+    <input id="dealInput" placeholder="Deal" />
+    <select id="stageInput">
+      <option>Discovery</option><option>Qualified</option><option>Proposal</option><option>Negotiation</option>
+    </select>
+    <input id="valueInput" placeholder="Value (e.g. 5000)" type="number" />
+    <input id="ownerInput" placeholder="Owner" />
+    <button class="btn" id="saveBtn">Save</button>
+    <button class="btn" onclick="closeModal()">Cancel</button>
+  </div>
+</div>
+
+<script>
+const overlay = document.getElementById("overlay");
+const contentArea = document.getElementById("contentArea");
+let editingRow = null;
+let pipelineChart = null;
+
+const pages = {
+  dashboard: `
+    <h1>Dashboard</h1>
+    <div class="grid">
+      <div class="card">
+        <h3>Leads</h3>
+        <p id="kpiLeads">1,284</p>
+        <small>+12% MoM</small>
+      </div>
+      <div class="card">
+        <h3>Opportunities</h3>
+        <p id="kpiOpps">4</p>
+        <small>+5% MoM</small>
+      </div>
+      <div class="card">
+        <h3>Close Rate</h3>
+        <p id="kpiClose">28%</p>
+        <small>+2 pts</small>
+      </div>
+      <div class="card">
+        <h3>Revenue</h3>
+        <p id="kpiRevenue">$0</p>
+        <small>Auto</small>
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Pipeline (Last 6 Weeks)</h3>
+        <canvas id="pipelineChart" height="100"></canvas>
+      </div>
+
+      <div class="card" id="tasksCard">
+        <h3>Tasks</h3>
+        <ul id="taskList" style="list-style:none;padding:0;margin:0;">
+          <li><input type="checkbox" /> Call new leads <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+          <li><input type="checkbox" checked /> Launch email campaign <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+          <li><input type="checkbox" /> Update funnel step <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+          <li><input type="checkbox" /> Review automation <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+        </ul>
+        <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
+      </div>
+</div>
+      <div class="card">
+        <h3>Recent Opportunities</h3>
+        <table id="oppsTable">
+          <thead>
+            <tr>
+              <th>Deal</th>
+              <th>Stage</th>
+              <th>Value</th>
+              <th>Owner</th>
+              <th>Updated</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Website Redesign</td>
+              <td>Proposal</td>
+              <td>$8400</td>
+              <td>Alex</td>
+              <td>Today</td>
+              <td><button class="btn edit-btn">Edit</button></td>
+            </tr>
+            <tr>
+              <td>SEO Retainer</td>
+              <td>Negotiation</td>
+              <td>$2100</td>
+              <td>Sam</td>
+              <td>Yesterday</td>
+              <td><button class="btn edit-btn">Edit</button></td>
+            </tr>
+            <tr>
+              <td>Ads Package</td>
+              <td>Qualified</td>
+              <td>$3600</td>
+              <td>Jamie</td>
+              <td>Aug 20</td>
+              <td><button class="btn edit-btn">Edit</button></td>
+            </tr>
+            <tr>
+              <td>CRM Migration</td>
+              <td>Discovery</td>
+              <td>$5200</td>
+              <td>Riley</td>
+              <td>Aug 17</td>
+              <td><button class="btn edit-btn">Edit</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  `,
+
+  Vendor: `<h1>Vendor Management</h1><p>Vendor content here...</p>`,
+  Commodity: `<h1>Commodity and Price Monitoring</h1><p>Commodity content here...</p>`,
+  Supply: `<h1>Supply Monitoring</h1><p>Supply content here...</p>`,
+  Inspection: `<h1>Inspection and compliance</h1><p>Inspection content here...</p>`,
+  Reports: `<h1>Reports and Dashboard with AI analytic</h1><p>Reports content here...</p>`,
+  Settings: `<h1>Settings</h1><p>Settings content here...</p>`
+};
+
+function openModal(row=null){
+  overlay.style.display="flex"; 
+  editingRow=row;
+  if(row){
+    document.getElementById("modalTitle").innerText="Edit Opportunity";
+    document.getElementById("dealInput").value=row.cells[0].innerText;
+    document.getElementById("stageInput").value=row.cells[1].innerText;
+    document.getElementById("valueInput").value=row.cells[2].innerText.replace(/\$/,"");
+    document.getElementById("ownerInput").value=row.cells[3].innerText;
+  } else {
+    document.getElementById("modalTitle").innerText="New Opportunity";
+    document.querySelectorAll(".modal input").forEach(i=>i.value="");
+  }
+}
+
+function closeModal(){overlay.style.display="none";}
+
+function attachEditButtons(){
+  document.querySelectorAll(".edit-btn").forEach(b=>{
+    b.onclick=()=>openModal(b.closest("tr"));
+  });
+}
+
+function attachTaskActions(){
+  const taskList=document.getElementById("taskList"), addTaskBtn=document.getElementById("addTaskBtn");
+  if(!taskList) return;
+  document.querySelectorAll("#taskList li").forEach(li=>{
+    const editIcon=li.querySelector(".edit-icon"), deleteIcon=li.querySelector(".delete-icon");
+    editIcon.onclick=()=>{const newText=prompt("Edit Task", li.firstChild.textContent.trim()); if(newText) li.firstChild.textContent=newText+" ";};
+    deleteIcon.onclick=()=>{if(confirm("Delete this task?")) li.remove();};
+  });
+  addTaskBtn.onclick=()=>{
+    const taskName=prompt("Enter new task:");
+    if(taskName){
+      const li=document.createElement("li");
+      li.innerHTML=`<input type="checkbox" /> ${taskName} <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span>`;
+      taskList.appendChild(li);
+      attachTaskActions();
+    }
+  };
+}
+
+function initDashboard(){
+  const container = document.getElementById("contentArea");
+  container.innerHTML = pages.dashboard;
+  attachEditButtons();
+  attachTaskActions();
+
+  const ctx = document.getElementById("pipelineChart");
+  if(ctx){ 
+    pipelineChart = new Chart(ctx,{ 
+    type:"line", 
+      data:{
+        labels:["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"],
+        datasets:[{ 
+          label:"Opportunities", 
+          data:[10,15,8,20,18,25], 
+          borderColor:"#0a53c1",
+          backgroundColor:"rgba(10,83,193,0.2)", 
+          fill:true, 
+          tension:0.3 
+        }]
+      } 
+    }); 
+  } 
+}
+
+
+document.querySelectorAll(".nav-item").forEach(link => {
+  if(!link.classList.contains("logout-btn")){
+    link.onclick = (e)=>{
+      e.preventDefault();
+      document.querySelectorAll(".nav-item").forEach(l=>l.classList.remove("active"));
+      link.classList.add("active");
+      const page = link.dataset.page;
+      contentArea.innerHTML = pages[page] || `<h1>${page}</h1>`;
+      if(page==="dashboard") initDashboard();
+    }
+  }
+});
+
+document.getElementById("backBtn").onclick = () => { window.history.back(); };
+document.getElementById("menuBtn").onclick = () => { document.getElementById("sidebar").classList.toggle("open"); };
+document.getElementById("newBtn").onclick = () => openModal();
+document.getElementById("saveBtn").onclick = () => {
+  const table = document.querySelector("#oppsTable tbody");
+  if(!table) return;
+  const deal = document.getElementById("dealInput").value,
+        stage = document.getElementById("stageInput").value,
+        value = "$" + document.getElementById("valueInput").value,
+        owner = document.getElementById("ownerInput").value,
+        updated = "Today";
+  if(editingRow){
+    editingRow.cells[0].innerText = deal;
+    editingRow.cells[1].innerText = stage;
+    editingRow.cells[2].innerText = value;
+    editingRow.cells[3].innerText = owner;
+    editingRow.cells[4].innerText = updated;
+  } else {
+    const row = table.insertRow();
+    row.innerHTML = `<td>${deal}</td><td>${stage}</td><td>${value}</td><td>${owner}</td><td>${updated}</td>
+      <td><button class="btn edit-btn">Edit</button></td>`;
+  }
+  attachEditButtons();
+  closeModal();
+};
+
+initDashboard();
+</script>
+</body>
+</html>
