--- a/userdashboard.html
+++ b/userdashboard.html
@@ -95,34 +95,16 @@ const pages = {
   dashboard: `
     <h1>Dashboard</h1>
     <div class="grid">
-      <div class="card">
-        <h3>Leads</h3>
-        <p id="kpiLeads">1,284</p>
-        <small>+12% MoM</small>
-      </div>
-      <div class="card">
-        <h3>Opportunities</h3>
-        <p id="kpiOpps">4</p>
-        <small>+5% MoM</small>
-      </div>
-      <div class="card">
-        <h3>Close Rate</h3>
-        <p id="kpiClose">28%</p>
-        <small>+2 pts</small>
-      </div>
-      <div class="card">
-        <h3>Revenue</h3>
-        <p id="kpiRevenue">$0</p>
-        <small>Auto</small>
-      </div>
+      <div class="card"><h3>Leads</h3><p id="kpiLeads">1,284</p><small>+12% MoM</small></div>
+      <div class="card"><h3>Opportunities</h3><p id="kpiOpps">4</p><small>+5% MoM</small></div>
+      <div class="card"><h3>Close Rate</h3><p id="kpiClose">28%</p><small>+2 pts</small></div>
+      <div class="card"><h3>Revenue</h3><p id="kpiRevenue">$0</p><small>Auto</small></div>
     </div>
-
     <div class="grid">
       <div class="card">
         <h3>Pipeline (Last 6 Weeks)</h3>
         <canvas id="pipelineChart" height="100"></canvas>
       </div>
-
       <div class="card" id="tasksCard">
         <h3>Tasks</h3>
         <ul id="taskList" style="list-style:none;padding:0;margin:0;">
@@ -133,92 +115,56 @@ const pages = {
         </ul>
         <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
       </div>
-</div>
       <div class="card">
         <h3>Recent Opportunities</h3>
         <table id="oppsTable">
-          <thead>
-            <tr>
-              <th>Deal</th>
-              <th>Stage</th>
-              <th>Value</th>
-              <th>Owner</th>
-              <th>Updated</th>
-              <th>Action</th>
-            </tr>
-          </thead>
+          <thead><tr><th>Deal</th><th>Stage</th><th>Value</th><th>Owner</th><th>Updated</th><th>Action</th></tr></thead>
           <tbody>
-            <tr>
-              <td>Website Redesign</td>
-              <td>Proposal</td>
-              <td>$8400</td>
-              <td>Alex</td>
-              <td>Today</td>
-              <td><button class="btn edit-btn">Edit</button></td>
-            </tr>
-            <tr>
-              <td>SEO Retainer</td>
-              <td>Negotiation</td>
-              <td>$2100</td>
-              <td>Sam</td>
-              <td>Yesterday</td>
-              <td><button class="btn edit-btn">Edit</button></td>
-            </tr>
-            <tr>
-              <td>Ads Package</td>
-              <td>Qualified</td>
-              <td>$3600</td>
-              <td>Jamie</td>
-              <td>Aug 20</td>
-              <td><button class="btn edit-btn">Edit</button></td>
-            </tr>
-            <tr>
-              <td>CRM Migration</td>
-              <td>Discovery</td>
-              <td>$5200</td>
-              <td>Riley</td>
-              <td>Aug 17</td>
-              <td><button class="btn edit-btn">Edit</button></td>
-            </tr>
+            <tr><td>Website Redesign</td><td>Proposal</td><td>$8400</td><td>Alex</td><td>Today</td><td><button class="btn edit-btn">Edit</button></td></tr>
+            <tr><td>SEO Retainer</td><td>Negotiation</td><td>$2100</td><td>Sam</td><td>Yesterday</td><td><button class="btn edit-btn">Edit</button></td></tr>
+            <tr><td>Ads Package</td><td>Qualified</td><td>$3600</td><td>Jamie</td><td>Aug 20</td><td><button class="btn edit-btn">Edit</button></td></tr>
+            <tr><td>CRM Migration</td><td>Discovery</td><td>$5200</td><td>Riley</td><td>Aug 17</td><td><button class="btn edit-btn">Edit</button></td></tr>
           </tbody>
         </table>
       </div>
     </div>
   `,
 
-  Vendor: ` <h1>Vendor Management - Page 1</h1>
-  <input type="text" id="vendorSearch" placeholder="Search Vendor…" class="search" style="margin-bottom:1rem;width:100%;padding:.5rem;">
-  <table id="vendorTable">
-    <thead>
-      <tr>
-        <th>Type of Business</th><th>Status</th><th>Owner</th>
-        <th>Due Date</th><th>Records of Payment</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>Takoyaki store</td><td>✅ Completed</td><td>DesignEase</td><td>03 Sep 2025</td><td>3,785.00</td></tr>
-      <tr><td>Sound equipment</td><td>✏ In progress</td><td>Nina's Cute Cr…</td><td>04 Mar 2030</td><td></td></tr>
-      <tr><td>Tables and chairs</td><td>⏳ Not started</td><td></td><td>04 Mar 2030</td><td></td></tr>
-      <tr><td>Name tags</td><td>⛔ Blocked</td><td></td><td>12 Mar 2030</td><td></td></tr>
-    </tbody>
-  </table>
-`;
+  Vendor: `
+    <h1>Vendor Management</h1>
+    <input type="text" id="vendorSearch" placeholder="Search Vendor…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+    <table id="vendorTable">
+      <thead>
+        <tr><th>Type of Business</th><th>Status</th><th>Owner</th><th>Due Date</th><th>Records of Payment</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>Takoyaki store</td><td>✅ Completed</td><td>DesignEase</td><td>03 Sep 2025</td><td>3,785.00</td></tr>
+        <tr><td>Sound equipment</td><td>✏ In progress</td><td>Nina's Cute Cr…</td><td>04 Mar 2030</td><td></td></tr>
+        <tr><td>Tables and chairs</td><td>⏳ Not started</td><td></td><td>04 Mar 2030</td><td></td></tr>
+        <tr><td>Name tags</td><td>⛔ Blocked</td><td></td><td>12 Mar 2030</td><td></td></tr>
+      </tbody>
+    </table>
+  `,
+
   Commodity: `<h1>Commodity and Price Monitoring</h1><p>Commodity content here...</p>`,
-  Supply:  <h1>Supply Monitoring</h1>
-  <input type="text" id="supplySearch" placeholder="Search Supply…" class="search" style="margin-bottom:1rem;width:100%;padding:.5rem;">
-  <table id="supplyTable">
-    <thead>
-      <tr>
-        <th>Type of Business</th><th>Client</th><th>Pick-up</th><th>Drop-off</th>
-        <th>Delivery Time</th><th>Supplier</th><th>Contact No.</th>
-        <th>Item Value</th><th>Quality</th><th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>MEAT SHOP</td><td>JAMES</td><td>QUEZON CITY</td><td>LASPIÑAS</td><td>12:00 am - 2:00 pm</td><td>FRANCIS</td><td>0970-567-1136</td><td>4,000.00</td><td>⭐⭐⭐⭐⭐</td><td>⛔Delayed</td></tr>
-    </tbody>
-  </table>
-`;
+
+  Supply: `
+    <h1>Supply Monitoring</h1>
+    <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+    <table id="supplyTable">
+      <thead>
+        <tr>
+          <th>Type of Business</th><th>Client</th><th>Pick-up</th><th>Drop-off</th>
+          <th>Delivery Time</th><th>Supplier</th><th>Contact No.</th>
+          <th>Item Value</th><th>Quality</th><th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>MEAT SHOP</td><td>JAMES</td><td>QUEZON CITY</td><td>LASPIÑAS</td><td>12:00 am - 2:00 pm</td><td>FRANCIS</td><td>0970-567-1136</td><td>4,000.00</td><td>⭐⭐⭐⭐⭐</td><td>⛔Delayed</td></tr>
+      </tbody>
+    </table>
+  `,
+
   Inspection: `<h1>Inspection and compliance</h1><p>Inspection content here...</p>`,
   Reports: `<h1>Reports and Dashboard with AI analytic</h1><p>Reports content here...</p>`,
   Settings: `<h1>Settings</h1><p>Settings content here...</p>`
@@ -253,6 +199,7 @@ function makeTableEditable(tableId, searchId){
   }
 }
 
+// Navigation
 document.querySelectorAll(".nav-item").forEach(link=>{
   if(!link.classList.contains("logout-btn")){
     link.onclick=(e)=>{
@@ -262,8 +209,8 @@ document.querySelectorAll(".nav-item").forEach(link=>{
       const page=link.dataset.page;
       contentArea.innerHTML=pages[page] || `<h1>${page}</h1>`;
       if(page==="dashboard") initDashboard();
-      if(page==="VendorPage1") makeTableEditable("vendorTable","vendorSearch");
-      if(page==="SupplyPage") makeTableEditable("supplyTable","supplySearch");
+      if(page==="Vendor") makeTableEditable("vendorTable","vendorSearch");
+      if(page==="Supply") makeTableEditable("supplyTable","supplySearch");
     }
   }
 });
@@ -271,6 +218,7 @@ document.querySelectorAll(".nav-item").forEach(link=>{
 document.getElementById("backBtn").onclick=()=>{window.history.back();};
 document.getElementById("menuBtn").onclick=()=>{document.getElementById("sidebar").classList.toggle("open");};
 
+// Modal handling
 function openModal(row=null){
   overlay.style.display="flex"; 
   editingRow=row;
@@ -285,15 +233,12 @@ function openModal(row=null){
     document.querySelectorAll(".modal input").forEach(i=>i.value="");
   }
 }
-
 function closeModal(){overlay.style.display="none";}
-
 function attachEditButtons(){
   document.querySelectorAll(".edit-btn").forEach(b=>{
     b.onclick=()=>openModal(b.closest("tr"));
   });
 }
-
 function attachTaskActions(){
   const taskList=document.getElementById("taskList"), addTaskBtn=document.getElementById("addTaskBtn");
   if(!taskList) return;
@@ -322,7 +267,7 @@ function initDashboard(){
   const ctx = document.getElementById("pipelineChart");
   if(ctx){ 
     pipelineChart = new Chart(ctx,{ 
-    type:"line", 
+      type:"line", 
       data:{
         labels:["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"],
         datasets:[{ 
@@ -338,22 +283,6 @@ function initDashboard(){
   } 
 }
 
-
-document.querySelectorAll(".nav-item").forEach(link => {
-  if(!link.classList.contains("logout-btn")){
-    link.onclick = (e)=>{
-      e.preventDefault();
-      document.querySelectorAll(".nav-item").forEach(l=>l.classList.remove("active"));
-      link.classList.add("active");
-      const page = link.dataset.page;
-      contentArea.innerHTML = pages[page] || `<h1>${page}</h1>`;
-      if(page==="dashboard") initDashboard();
-    }
-  }
-});
-
-document.getElementById("backBtn").onclick = () => { window.history.back(); };
-document.getElementById("menuBtn").onclick = () => { document.getElementById("sidebar").classList.toggle("open"); };
 document.getElementById("newBtn").onclick = () => openModal();
 document.getElementById("saveBtn").onclick = () => {
   const table = document.querySelector("#oppsTable tbody");
