--- a/userdashboard.html
+++ b/userdashboard.html
@@ -134,7 +134,7 @@ const pages = {
   `,
 
   Vendor: `
-    <h1>Vendor Management</h1>
+     <h1>Vendor Management</h1>
     <input type="text" id="vendorSearch" placeholder="Search Vendor…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
     <table id="vendorTable">
       <thead>
@@ -149,21 +149,41 @@ const pages = {
       </thead>
       <tbody>
         <tr>
-          <td>Takoyaki store</td><td>✅ Completed</td><td>DesignEase</td><td>03 Sep 2025</td><td>3,785.00</td><td data-stars="4"></td>
+          <td>Takoyaki store</td>
+          <td>✅ Completed</td>
+          <td>Gacusan, Aira Jane</td>
+          <td>03 Sep 2025</td>
+          <td>3,785.00</td>
+          <td>★★★★★</td>
         </tr>
         <tr>
-          <td>Sound equipment</td><td>✏ In progress</td><td>Nina's Cute Cr…</td><td>04 Mar 2030</td><td></td><td data-stars="3"></td>
+          <td>Sound equipment</td>
+          <td>✏ In progress</td>
+          <td>Furigay, Neri Jane</td>
+          <td>10 Sep 2025</td>
+          <td></td>
+          <td>★★★★★</td>
         </tr>
         <tr>
-          <td>Tables and chairs</td><td>⏳ Not started</td><td></td><td>04 Mar 2030</td><td></td><td data-stars="1"></td>
+          <td>Tables and chairs</td>
+          <td>⏳ Not started</td>
+          <td>Pena, Rona Mae</td>
+          <td>04 Nov 2025</td>
+          <td></td>
+          <td>★★★★★</td>
         </tr>
         <tr>
-          <td>Name tags</td><td>⛔ Blocked</td><td></td><td>12 Mar 2030</td><td></td><td data-stars="5"></td>
+          <td>Atan's Meat Shop</td>
+          <td>⛔ Blocked</td>
+          <td>Dacoco, Jonathan</td>
+          <td>12 Mar 2025</td>
+          <td></td>
+          <td>★★★★★</td>
         </tr>
       </tbody>
     </table>
   `,
-
+  
   Commodity: `<h1>Commodity and Price Monitoring</h1><p>Commodity content here...</p>`,
 
   Supply: `
