--- a/userdashboard.html
+++ b/userdashboard.html
@@ -139,7 +139,7 @@ const pages = {
   <table id="vendorTable">
     <thead>
       <tr>
-        <th>Type of Business</th>
+        <th>Business Name</th>
         <th>Status</th>
         <th>Owner</th>
         <th>Due Date</th>
@@ -193,7 +193,7 @@ const pages = {
     <thead>
       <tr>
         <th>Business Name</th>
-        <th>Type of Business</th>
+        <th>Business Category</th>
         <th>Client</th>
         <th>Pick-up</th>
         <th>Drop-off</th>
