--- a/userdashboard.html
+++ b/userdashboard.html
@@ -194,7 +194,7 @@ const pages = {
       <tr>
         <th>Business Name</th>
         <th>Business Category</th>
-        <th>Client</th>
+        <th>Supplier</th>
         <th>Pick-up</th>
         <th>Drop-off</th>
         <th>Delivery Time</th>
