--- a/userdashboard.html
+++ b/userdashboard.html
@@ -96,43 +96,53 @@ let pipelineChart = null;
 const pages = {
   dashboard: `
     <h1>Dashboard</h1>
-    <div class="grid">
-      <div class="card"><h3>Leads</h3><p id="kpiLeads">1,284</p><small>+12% MoM</small></div>
-      <div class="card"><h3>Opportunities</h3><p id="kpiOpps">4</p><small>+5% MoM</small></div>
-      <div class="card"><h3>Close Rate</h3><p id="kpiClose">28%</p><small>+2 pts</small></div>
-      <div class="card"><h3>Revenue</h3><p id="kpiRevenue">$0</p><small>Auto</small></div>
-    </div>
-    <div class="grid">
-      <div class="card">
-        <h3>Pipeline (Last 6 Weeks)</h3>
-        <canvas id="pipelineChart" height="100"></canvas>
-      </div>
-      <div class="card" id="tasksCard">
-        <h3>Tasks</h3>
-        <ul id="taskList" style="list-style:none;padding:0;margin:0;">
-          <li><input type="checkbox" /> Call new leads <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" checked /> Launch email campaign <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" /> Update funnel step <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-          <li><input type="checkbox" /> Review automation <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
-        </ul>
-        <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
-      </div>
-    </div>
-    <!-- Recent Opportunities at bottom -->
-    <div class="card" style="margin-top:1rem;">
-      <h3>Recent Opportunities</h3>
-      <table id="oppsTable">
-        <thead><tr><th>Deal</th><th>Stage</th><th>Value</th><th>Owner</th><th>Updated</th><th>Action</th></tr></thead>
-        <tbody>
-          <tr><td>Website Redesign</td><td>Proposal</td><td>$8400</td><td>Alex</td><td>Today</td><td><button class="btn edit-btn">Edit</button></td></tr>
-          <tr><td>SEO Retainer</td><td>Negotiation</td><td>$2100</td><td>Sam</td><td>Yesterday</td><td><button class="btn edit-btn">Edit</button></td></tr>
-          <tr><td>Ads Package</td><td>Qualified</td><td>$3600</td><td>Jamie</td><td>Aug 20</td><td><button class="btn edit-btn">Edit</button></td></tr>
-          <tr><td>CRM Migration</td><td>Discovery</td><td>$5200</td><td>Riley</td><td>Aug 17</td><td><button class="btn edit-btn">Edit</button></td></tr>
-        </tbody>
-      </table>
-    </div>
-  `,
+  <div class="grid">
+    <div class="card"><h3>Price Variance / Cost Savings</h3><p id="kpiSavings">₱12,500</p><small>+8% vs last month</small></div>
+    <div class="card"><h3>On-Time Delivery Rate</h3><p id="kpiDelivery">92%</p><small>+3 pts</small></div>
+    <div class="card"><h3>Defect Rate / Compliance Score</h3><p id="kpiDefects">2%</p><small>-1 pt</small></div>
+    <div class="card"><h3>Vendor Performance Score</h3><p id="kpiVendor">87/100</p><small>Stable</small></div>
+  </div>
 
+  <div class="grid">
+    <div class="card">
+      <h3>Supply Chain Flow (Last 6 Weeks)</h3>
+      <canvas id="pipelineChart" height="100"></canvas>
+    </div>
+    <div class="card" id="tasksCard">
+      <h3>Tasks</h3>
+      <ul id="taskList" style="list-style:none;padding:0;margin:0;">
+        <li><input type="checkbox" /> Review vendor contracts <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+        <li><input type="checkbox" checked /> Monitor deliveries <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+        <li><input type="checkbox" /> Update compliance checklist <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+        <li><input type="checkbox" /> Evaluate supplier pricing <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span></li>
+      </ul>
+      <button id="addTaskBtn" class="btn" style="margin-top:.5rem;">➕</button>
+    </div>
+  </div>
+
+ 
+  <div class="card" style="margin-top:1rem;">
+    <h3>Recent Vendor Engagements</h3>
+    <table id="vendorEngagementsTable">
+      <thead>
+        <tr>
+          <th>Type of Business</th>
+          <th>Status</th>
+          <th>Owner</th>
+          <th>Due Date</th>
+          <th>Records of Payment</th>
+          <th>Rating</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>Takoyaki store</td><td>✅ Completed</td><td>Gacusan, Aira Jane</td><td>03 Sep 2025</td><td>3,785.00</td><td>★★★★★</td></tr>
+        <tr><td>Sound equipment</td><td>✏ In progress</td><td>Furigay, Neri Jane</td><td>10 Sep 2025</td><td></td><td>★★★★★</td></tr>
+        <tr><td>Tables and chairs</td><td>⏳ Not started</td><td>Pena, Rona Mae</td><td>04 Nov 2025</td><td></td><td>★★★★★</td></tr>
+        <tr><td>Atan's Meat Shop</td><td>⛔ Blocked</td><td>Dacoco, Jonathan</td><td>12 Mar 2025</td><td></td><td>★★★★★</td></tr>
+      </tbody>
+    </table>
+  </div>
+`,
   Vendor: `
     <h1>Vendor Management</h1>
   <input type="text" id="vendorSearch" placeholder="Search Vendor…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
